add bytebuddy example